[package]
name = "json_comments"
version = "0.1.0"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tmccombs/json-comments-rs"
description = "Library to strip comments from JSON before parsing"

[badges]
travis-ci = { repository = "tmccombs/json-comments-rs" }

[dependencies]
